--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <hr class="hr0">
 
     <!-- Part-02 -->
-    <div class="row News-Cards">
+    <div class="row g-0 News-Cards">
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/News1.png" class="card-img-top" alt="..." width="286" height="214">
+          <img src="Images/news-images/News1.png" class="card-img-top" alt="..." width="372" height="224" fetchpriority="high">
           <div class="card-body">
             <h5 class="card-title">PayPal enables transfer of digital currencies to external wallets</h5>
             <a href="news1.html" class="btn btn-primary">Go to article</a>
@@ -89,7 +89,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/News2.png" class="card-img-top" alt="..." width="286" height="214">
+          <img src="Images/news-images/News2.png" class="card-img-top" alt="..." width="372" height="224" fetchpriority="high">
           <div class="card-body">
             <h5 class="card-title">Italian Parliament Approves 26% Crypto-Gains Tax in 2023 Budget</h5>
             <a href="news2.html" class="btn btn-primary">Go to article</a>
@@ -99,7 +99,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/News3.png" class="card-img-top" alt="..." width="286" height="214">
+          <img src="Images/news-images/News3.png" class="card-img-top" alt="..." width="372" height="224" fetchpriority="high">
           <div class="card-body">
             <h5 class="card-title">Microstrategy Buys More Bitcoin — Company's Crypto Holdings Grow to 132,500 BTC</h5>
             <a href="news3.html" class="btn btn-primary">Go to article</a>
@@ -109,7 +109,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/News4.png" class="card-img-top" alt="..." width="286" height="214">
+          <img src="Images/news-images/News4.png" class="card-img-top" alt="..." width="372" height="224" fetchpriority="high">
           <div class="card-body">
             <h5 class="card-title">Bitcoin Miner's Revenue Hits $9.55 Billion in 2022</h5>
             <a href="news4.html" class="btn btn-primary">Go to article</a>
@@ -119,7 +119,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/News5.png" class="card-img-top" alt="..." width="286" height="214">
+          <img src="Images/news-images/News5.png" class="card-img-top" alt="..." width="372" height="224" fetchpriority="high">
           <div class="card-body">
             <h5 class="card-title">Mango Markets Exploiter Eisenberg Arrested in Puerto Rico</h5>
             <a href="news5.html" class="btn btn-primary">Go to article</a>
