--- a/news1.html
+++ b/news1.html
@@ -74,7 +74,7 @@
     <!-- Part-02 -->
     <div class="middle-container">
         <br>
-        <img class="news-img" src="Images/news-images/News1.png" alt=""> 
+        <img class="news-img" src="Images/news-images/news-img-1.webp" alt=""> 
         <br><br>
         <div class="middle-container-news">
             <h3>PayPal enables transfer of digital currencies to external wallets</h3> <br>
