--- a/news2.html
+++ b/news2.html
@@ -77,7 +77,7 @@
     <!-- Part-02 -->
     <div class="middle-container">
         <br>
-        <img class="news-img" src="Images/news-images/News2.png" alt="" width="500px" height="500px">
+        <img class="news-img" src="Images/news-images/news-img-2.webp" alt="" width="500px" height="500px">
         <br><br>
         <div class="middle-container-news">
             <h3>Italian Parliament Approves 26% Crypto-Gains Tax in 2023 Budget</h3> <br>
