--- a/news3.html
+++ b/news3.html
@@ -77,7 +77,7 @@
     <!-- Part-02 -->
     <div class="middle-container">
         <br>
-        <img class="news-img" src="Images/news-images/News3.png" alt="" width="500px" height="500px">
+        <img class="news-img" src="Images/news-images/news-img-3.webp" alt="" width="500px" height="500px">
         <br><br>
         <div class="middle-container-news">
             <h3>Microstrategy Buys More Bitcoin — Company's Crypto Holdings Grow to 132,500 BTC</h3> <br>
