--- a/news4.html
+++ b/news4.html
@@ -77,7 +77,7 @@
     <!-- Part-02 -->
     <div class="middle-container">
         <br>
-        <img class="news-img" src="Images/news-images/News4.png" alt="" width="500px" height="500px">
+        <img class="news-img" src="Images/news-images/news-img-4.webp" alt="" width="500px" height="500px">
         <br><br>
         <div class="middle-container-news">
             <h3>Bitcoin Miners’ Revenue Hits $9.55 Billion in 2022</h3> <br>
