--- a/news5.html
+++ b/news5.html
@@ -77,7 +77,7 @@
     <!-- Part-02 -->
     <div class="middle-container">
         <br>
-        <img class="news-img" src="Images/news-images/News5.png" alt="" width="500px" height="500px">
+        <img class="news-img" src="Images/news-images/news-img-5.webp" alt="" width="500px" height="500px">
         <br><br>
         <div class="middle-container-news">
             <h3>Mango Markets Exploiter Eisenberg Arrested in Puerto Rico</h3> <br>
