--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Merriweather:ital@1&family=Montserrat&family=Playfair+Display:ital@0;1&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
@@ -28,7 +29,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="Images/logo/DailyBugle_BrandLogo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                The Daily Bugle
+                <brand class="brand"> The Daily Bugle </brand>
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +58,7 @@
         <img src="Images/logo/DailyBugle_BrandLogo.png" alt="" width="45px" height="45px">
       </div>
       <div class="hp-text">
-        <h2> The Daily Bugle | Dummy News Website</h2>
+        <h2> <brand class="brand"> The Daily Bugle </brand> | Dummy News Website</h2>
       </div>
       <div class="hp-date">
         <div class="date">
@@ -81,7 +82,7 @@
         <div class="card newslink">
           <img src="Images/news-images/news-img-1.webp" class="card-img-top" alt="..." width="372" height="224">
           <div class="card-body">
-            <h5 class="card-title">PayPal enables transfer of digital currencies to external wallets</h5>
+            <h5 class="card-title">PayPal enables transfer of digital currencies to external wallets <br></h5>
             <a href="news1.html" class="btn btn-primary">Go to article</a>
           </div>
         </div>
@@ -107,56 +108,93 @@
         </div>
       </div>
 
-      <div class="col-sm-4">
-        <div class="card newslink">
-          <img src="Images/news-images/news-img-4.webp" class="card-img-top" alt="..." width="372" height="224">
-          <div class="card-body">
-            <h5 class="card-title">Bitcoin Miner's Revenue Hits $9.55 Billion in 2022</h5>
-            <a href="news4.html" class="btn btn-primary">Go to article</a>
-          </div>
-        </div>
-      </div>
+      <div class="row g-0 News-Cards">
 
-      <div class="col-sm-4">
-        <div class="card newslink">
-          <img src="Images/news-images/news-img-5.webp" class="card-img-top" alt="..." width="372" height="224">
-          <div class="card-body">
-            <h5 class="card-title">Mango Markets Exploiter Eisenberg Arrested in Puerto Rico</h5>
-            <a href="news5.html" class="btn btn-primary">Go to article</a>
+        <div class="col-sm-4">
+          <div class="card newslink">
+            <img src="Images/news-images/news-img-4.webp" class="card-img-top" alt="..." width="372" height="224">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Miner's Revenue Hits $9.55 Billion in 2022</h5>
+              <a href="news4.html" class="btn btn-primary">Go to article</a>
+            </div>
           </div>
         </div>
-      </div>
+  
+        <div class="col-sm-4">
+          <div class="card newslink">
+            <img src="Images/news-images/news-img-5.webp" class="card-img-top" alt="..." width="372" height="224">
+            <div class="card-body">
+              <h5 class="card-title">Mango Markets Exploiter Eisenberg Arrested in Puerto Rico</h5>
+              <a href="news5.html" class="btn btn-primary">Go to article</a>
+            </div>
+          </div>
+        </div>
+
+      </div>    
 
     </div>
-    <hr class="hr0">
+
 
     <!-- Part-03 -->
-    <div class="home-page-p3">
-      <div class="p-31">
-        <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
-        <h3> The Daily Bugle </h3>
-      </div>
-      <div class="p-32">
-        <h4> - Subscribe to Our Daily Newsletter - </h4><br>
-            <form class="container-fluid ">
-              <div class="input-group">
-                <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                <script src="newsletter.js"></script>
-                <p id="output"></p>
-              </div>
-            </form>      
-      </div>
-      <div class="p-33">
-        <h4> - Site Links - </h4>
-        <ul class="ul1">
-            <li><a class="a1" href="index.html">Home</a></li>
-            <li><a class="a1" href="">About Us</a></li>
-            <li><a class="a1" href="">Privacy & Policy</a></li>
-            <li><a class="a1" href="">Contact</a></li>
-        </ul>
-      </div>
+<!-- Part-03 For largeScreen-->
+<div class="largeScreen">
+  <div class="p-ls-31">
+    <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
+    <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
+  </div>
+  <div class="p-ls-32">
+    <h4> - Subscribe to Our Daily Newsletter - </h4><br>
+        <form class="container-fluid ">
+          <div class="input-group">
+            <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+            <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
+            <script src="newsletter.js"></script>
+            <p id="output"></p>
+          </div>
+        </form>      
+  </div>
+  <div class="p-ls-33">
+    <h4> - Site Links - </h4>
+    <ul class="ul1">
+        <li><a class="a1" href="index.html">Home</a></li>
+        <li><a class="a1" href="">About Us</a></li>
+        <li><a class="a1" href="">Privacy & Policy</a></li>
+        <li><a class="a1" href="">Contact</a></li>
+    </ul>
+  </div>
+</div>
+<hr class="hr0">
+
+ <!-- Part-03  For smallScreen-->
+ <div class="smallScreen">
+     <div class="p-ss-31-33">
+        <div class="p-ss-31">
+            <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
+             <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
+         </div>
+         <div class="p-ss-33">
+             <br><h4> - Site Links - </h4>
+               <ul class="ul1">
+                 <li><a class="a1" href="index.html">Home</a></li>
+                 <li><a class="a1" href="">About Us</a></li>
+                 <li><a class="a1" href="">Privacy & Policy</a></li>
+                 <li><a class="a1" href="">Contact</a></li>
+               </ul>
+         </div>
     </div>
+
+    <div class="p-ss-32">
+      <h4> - Subscribe to Our Daily Newsletter - </h4><br>
+        <form class="container-fluid ">
+           <div class="input-group">
+             <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+             <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
+              <script src="newsletter.js"></script>
+              <p id="output"></p>
+            </div>
+        </form>      
+    </div>
+</div>
     <hr class="hr0">
 
     <!-- Part-04 -->
