--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="Images/logo/DailyBugle_BrandLogo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="Images/logo/DailyBugle_BrandLogo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
                 <brand class="brand"> The Daily Bugle </brand>
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/news-img-1.webp" class="card-img-top" alt="..." width="372" height="224">
+          <img src="Images/news-images/news-img-1.webp" class="card-img-top" alt="..." width="375" height="250">
           <div class="card-body">
             <h5 class="card-title">PayPal enables transfer of digital currencies to external wallets <br></h5>
             <a href="news1.html" class="btn btn-primary">Go to article</a>
@@ -90,7 +90,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/news-img-2.webp" class="card-img-top" alt="..." width="372" height="224">
+          <img src="Images/news-images/news-img-2.webp" class="card-img-top" alt="..." width="400" height="254">
           <div class="card-body">
             <h5 class="card-title">Italian Parliament Approves 26% Crypto-Gains Tax in 2023 Budget</h5>
             <a href="news2.html" class="btn btn-primary">Go to article</a>
@@ -100,7 +100,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/news-img-3.webp" class="card-img-top" alt="..." width="372" height="224">
+          <img src="Images/news-images/news-img-3.webp" class="card-img-top" alt="..." width="500" height="250">
           <div class="card-body">
             <h5 class="card-title">Microstrategy Buys More Bitcoin — Company's Crypto Holdings Grow to 132,500 BTC</h5>
             <a href="news3.html" class="btn btn-primary">Go to article</a>
@@ -112,7 +112,7 @@
 
         <div class="col-sm-4">
           <div class="card newslink">
-            <img src="Images/news-images/news-img-4.webp" class="card-img-top" alt="..." width="372" height="224">
+            <img src="Images/news-images/news-img-4.webp" class="card-img-top" alt="..." width="333" height="250">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Miner's Revenue Hits $9.55 Billion in 2022</h5>
               <a href="news4.html" class="btn btn-primary">Go to article</a>
@@ -122,7 +122,7 @@
   
         <div class="col-sm-4">
           <div class="card newslink">
-            <img src="Images/news-images/news-img-5.webp" class="card-img-top" alt="..." width="372" height="224">
+            <img src="Images/news-images/news-img-5.webp" class="card-img-top" alt="..." width="414" height="250">
             <div class="card-body">
               <h5 class="card-title">Mango Markets Exploiter Eisenberg Arrested in Puerto Rico</h5>
               <a href="news5.html" class="btn btn-primary">Go to article</a>
@@ -130,14 +130,14 @@
           </div>
         </div>
 
-      </div>    
+      </div> 
 
     </div>
-
+    <hr class="hr0">
 
     <!-- Part-03 -->
-<!-- Part-03 For largeScreen-->
-<div class="largeScreen">
+ <!-- Part-03 For largeScreen-->
+ <div class="largeScreen">
   <div class="p-ls-31">
     <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
     <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
@@ -146,9 +146,9 @@
     <h4> - Subscribe to Our Daily Newsletter - </h4><br>
         <form class="container-fluid ">
           <div class="input-group">
-            <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-            <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-            <script src="newsletter.js"></script>
+            <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+            <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+             <script src="newsletter.js"></script>
             <p id="output"></p>
           </div>
         </form>      
@@ -162,8 +162,8 @@
         <li><a class="a1" href="">Contact</a></li>
     </ul>
   </div>
-</div>
-<hr class="hr0">
+  
+ </div>
 
  <!-- Part-03  For smallScreen-->
  <div class="smallScreen">
@@ -187,15 +187,15 @@
       <h4> - Subscribe to Our Daily Newsletter - </h4><br>
         <form class="container-fluid ">
            <div class="input-group">
-             <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-             <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
+             <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+             <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
               <script src="newsletter.js"></script>
               <p id="output"></p>
             </div>
         </form>      
     </div>
-</div>
-    <hr class="hr0">
+ </div>
+ <hr class="hr0">
 
     <!-- Part-04 -->
     <div class="footer">
