--- a/news4.html
+++ b/news4.html
@@ -103,8 +103,7 @@
         <a href="index.html" class="btn btn-primary"> Home </a>
         <a href="news5.html" class="btn btn-success">Next Page</a>
     </div>
-
-
+    <hr class="hr0">
 
     <!-- Part-03 -->
         <!-- Part-03 For largeScreen-->
@@ -117,9 +116,9 @@
             <h4> - Subscribe to Our Daily Newsletter - </h4><br>
                 <form class="container-fluid ">
                   <div class="input-group">
-                    <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                    <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                    <script src="newsletter.js"></script>
+                    <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+                    <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+                     <script src="newsletter.js"></script>
                     <p id="output"></p>
                   </div>
                 </form>      
@@ -134,8 +133,7 @@
             </ul>
           </div>
         </div>
-        <hr class="hr0">
-    
+
         <!-- Part-03  For smallScreen-->
         <div class="smallScreen">
             <div class="p-ss-31-33">
@@ -158,15 +156,15 @@
               <h4> - Subscribe to Our Daily Newsletter - </h4><br>
                 <form class="container-fluid ">
                    <div class="input-group">
-                     <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                     <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                      <script src="newsletter.js"></script>
+                    <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+                    <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+                     <script src="newsletter.js"></script>
                       <p id="output"></p>
                     </div>
                 </form>      
             </div>
         </div>
-            <hr class="hr0">
+        <hr class="hr0">
 
     <!-- Part-04 -->
     <div class="footer">
