--- a/news5.html
+++ b/news5.html
@@ -95,8 +95,8 @@
         <a href="news4.html" class="btn btn-secondary">Previous Page</a>
         <a href="index.html" class="btn btn-primary"> Home </a>
     </div>
+    <hr class="hr0">
 
-    
     <!-- Part-03 -->
         <!-- Part-03 For largeScreen-->
         <div class="largeScreen">
@@ -108,9 +108,9 @@
             <h4> - Subscribe to Our Daily Newsletter - </h4><br>
                 <form class="container-fluid ">
                   <div class="input-group">
-                    <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                    <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                    <script src="newsletter.js"></script>
+                    <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+                    <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+                     <script src="newsletter.js"></script>
                     <p id="output"></p>
                   </div>
                 </form>      
@@ -125,7 +125,6 @@
             </ul>
           </div>
         </div>
-        <hr class="hr0">
     
         <!-- Part-03  For smallScreen-->
         <div class="smallScreen">
@@ -149,15 +148,15 @@
               <h4> - Subscribe to Our Daily Newsletter - </h4><br>
                 <form class="container-fluid ">
                    <div class="input-group">
-                     <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                     <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                      <script src="newsletter.js"></script>
+                    <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+                    <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+                     <script src="newsletter.js"></script>
                       <p id="output"></p>
                     </div>
                 </form>      
             </div>
         </div>
-            <hr class="hr0">
+        <hr class="hr0">
 
     <!-- Part-04 -->
     <div class="footer">
