--- a/news2.html
+++ b/news2.html
@@ -99,8 +99,7 @@
         <a href="index.html" class="btn btn-primary"> Home </a>
         <a href="news3.html" class="btn btn-success">Next Page</a>
     </div>
-
-
+    <hr class="hr0">
 
     <!-- Part-03 -->
     <!-- Part-03 For largeScreen-->
@@ -113,9 +112,9 @@
         <h4> - Subscribe to Our Daily Newsletter - </h4><br>
             <form class="container-fluid ">
               <div class="input-group">
-                <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                <script src="newsletter.js"></script>
+                <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+                <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+                 <script src="newsletter.js"></script>
                 <p id="output"></p>
               </div>
             </form>      
@@ -130,7 +129,6 @@
         </ul>
       </div>
     </div>
-    <hr class="hr0">
 
     <!-- Part-03  For smallScreen-->
     <div class="smallScreen">
@@ -154,15 +152,15 @@
           <h4> - Subscribe to Our Daily Newsletter - </h4><br>
             <form class="container-fluid ">
                <div class="input-group">
-                 <input type="text" id="email" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                 <input type="button" class="btn btn-primary" value="Submit" id="Submit"></input>
-                  <script src="newsletter.js"></script>
+                <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+                <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
+                 <script src="newsletter.js"></script>
                   <p id="output"></p>
                 </div>
             </form>      
         </div>
     </div>
-        <hr class="hr0">
+    <hr class="hr0">
 
     <!-- Part-04 -->
     <div class="footer">
