--- a/news3.html
+++ b/news3.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The Daily Bugle is a dummy news website created by Karthik Shetty">
     <title> The Daily Bugle</title>
     <!-- Favicon -->
     <link rel="icon" href="Images/logo/DailyBugle_Favicon.png">
@@ -115,65 +116,62 @@
 
 
     <!-- Part-03 -->
-    <!-- Part-03 For largeScreen-->
-    <div class="largeScreen">
-      <div class="p-ls-31">
-        <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
-        <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
-      </div>
-      <div class="p-ls-32">
-        <h4> - Subscribe to Our Daily Newsletter - </h4><br>
-            <form class="container-fluid ">
-              <div class="input-group">
-                <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
-                 <script src="newsletter.js"></script>
-                <p id="output"></p>
-              </div>
-            </form>      
-      </div>
-      <div class="p-ls-33">
-        <h4> - Site Links - </h4>
-        <ul class="ul1">
-            <li><a class="a1" href="index.html">Home</a></li>
-            <li><a class="a1" href="">About Us</a></li>
-            <li><a class="a1" href="">Privacy & Policy</a></li>
-            <li><a class="a1" href="">Contact</a></li>
-        </ul>
-      </div>
+ <!-- Part-03 For largeScreen-->
+ <div class="largeScreen">
+  <div class="p-ls-31">
+    <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
+    <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
+  </div>
+  <div class="p-ls-32">
+    <h4> - Subscribe to Our Daily Newsletter - </h4><br>
+        <form class="container-fluid ">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+            <input type="button" class="btn btn-primary" value="Submit"></input>
+          </div>
+        </form>      
+  </div>
+  <div class="p-ls-33">
+    <h4> - Site Links - </h4>
+    <ul class="ul1">
+        <li><a class="a1" href="index.html">Home</a></li>
+        <li><a class="a1" href="index.html">About Us</a></li>
+        <li><a class="a1" href="index.html">Privacy & Policy</a></li>
+        <li><a class="a1" href="index.html">Contact</a></li>
+    </ul>
+  </div>
+  
+ </div>
+
+ <!-- Part-03  For smallScreen-->
+ <div class="smallScreen">
+     <div class="p-ss-31-33">
+        <div class="p-ss-31">
+            <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
+             <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
+         </div>
+         <div class="p-ss-33">
+             <br><h4> - Site Links - </h4>
+               <ul class="ul1">
+                 <li><a class="a1" href="index.html">Home</a></li>
+                 <li><a class="a1" href="index.html">About Us</a></li>
+                 <li><a class="a1" href="index.html">Privacy & Policy</a></li>
+                 <li><a class="a1" href="index.html">Contact</a></li>
+               </ul>
+         </div>
     </div>
 
-    <!-- Part-03  For smallScreen-->
-    <div class="smallScreen">
-        <div class="p-ss-31-33">
-            <div class="p-ss-31">
-                <img src="Images/logo/DailyBugle_BrandLogo.png" alt="Daily-Bugle-logo" width="60px" height="60px" >
-                 <h3> <brand class="brand"> The Daily Bugle </brand> </h3>
-             </div>
-             <div class="p-ss-33">
-                 <br><h4> - Site Links - </h4>
-                   <ul class="ul1">
-                     <li><a class="a1" href="index.html">Home</a></li>
-                     <li><a class="a1" href="">About Us</a></li>
-                     <li><a class="a1" href="">Privacy & Policy</a></li>
-                     <li><a class="a1" href="">Contact</a></li>
-                   </ul>
-             </div>
-        </div>
-
-        <div class="p-ss-32">
-          <h4> - Subscribe to Our Daily Newsletter - </h4><br>
-            <form class="container-fluid ">
-               <div class="input-group">
-                <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-                <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
-                 <script src="newsletter.js"></script>
-                  <p id="output"></p>
-                </div>
-            </form>      
-        </div>
+    <div class="p-ss-32">
+      <h4> - Subscribe to Our Daily Newsletter - </h4><br>
+        <form class="container-fluid ">
+           <div class="input-group">
+             <input type="text" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+             <input type="button" class="btn btn-primary" value="Submit"></input>
+            </div>
+        </form>      
     </div>
-    <hr class="hr0">
+ </div>
+ <hr class="hr0">
 
     <!-- Part-04 -->
     <div class="footer">
