--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Daily Bugle is a dummy news website created by Karthik Shetty">
+
     <title> The Daily Bugle | Home Page </title>
     <!-- Favicon -->
     <link rel="icon" href="Images/logo/DailyBugle_Favicon.png">
@@ -40,10 +42,10 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="">About Us</a>
+                <a class="nav-link" aria-current="page" href="index.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="">Contact</a>
+                <a class="nav-link" aria-current="page" href="index.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -58,7 +60,7 @@
         <img src="Images/logo/DailyBugle_BrandLogo.png" alt="" width="45px" height="45px">
       </div>
       <div class="hp-text">
-        <h2> <brand class="brand"> The Daily Bugle </brand> | Dummy News Website</h2>
+        <h1> <brand class="brand"> The Daily Bugle </brand> | Dummy News Website</h1>
       </div>
       <div class="hp-date">
         <div class="date">
@@ -80,7 +82,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/news-img-1.webp" class="card-img-top" alt="..." width="375" height="250">
+          <img src="Images/news-images/news-img-1.webp" class="card-img-top" alt="news-article-1" width="375" height="250">
           <div class="card-body">
             <h5 class="card-title">PayPal enables transfer of digital currencies to external wallets <br></h5>
             <a href="news1.html" class="btn btn-primary">Go to article</a>
@@ -90,7 +92,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/news-img-2.webp" class="card-img-top" alt="..." width="400" height="254">
+          <img src="Images/news-images/news-img-2.webp" class="card-img-top" alt="news-article-2" width="400" height="254">
           <div class="card-body">
             <h5 class="card-title">Italian Parliament Approves 26% Crypto-Gains Tax in 2023 Budget</h5>
             <a href="news2.html" class="btn btn-primary">Go to article</a>
@@ -100,7 +102,7 @@
 
       <div class="col-sm-4">
         <div class="card newslink">
-          <img src="Images/news-images/news-img-3.webp" class="card-img-top" alt="..." width="500" height="250">
+          <img src="Images/news-images/news-img-3.webp" class="card-img-top" alt="news-article-3" width="500" height="250">
           <div class="card-body">
             <h5 class="card-title">Microstrategy Buys More Bitcoin — Company's Crypto Holdings Grow to 132,500 BTC</h5>
             <a href="news3.html" class="btn btn-primary">Go to article</a>
@@ -112,7 +114,7 @@
 
         <div class="col-sm-4">
           <div class="card newslink">
-            <img src="Images/news-images/news-img-4.webp" class="card-img-top" alt="..." width="333" height="250">
+            <img src="Images/news-images/news-img-4.webp" class="card-img-top" alt="news-article-4" width="333" height="250">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Miner's Revenue Hits $9.55 Billion in 2022</h5>
               <a href="news4.html" class="btn btn-primary">Go to article</a>
@@ -122,7 +124,7 @@
   
         <div class="col-sm-4">
           <div class="card newslink">
-            <img src="Images/news-images/news-img-5.webp" class="card-img-top" alt="..." width="414" height="250">
+            <img src="Images/news-images/news-img-5.webp" class="card-img-top" alt="news-article-5" width="414" height="250">
             <div class="card-body">
               <h5 class="card-title">Mango Markets Exploiter Eisenberg Arrested in Puerto Rico</h5>
               <a href="news5.html" class="btn btn-primary">Go to article</a>
@@ -146,10 +148,8 @@
     <h4> - Subscribe to Our Daily Newsletter - </h4><br>
         <form class="container-fluid ">
           <div class="input-group">
-            <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-            <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
-             <script src="newsletter.js"></script>
-            <p id="output"></p>
+            <input type="text" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+            <input type="button" class="btn btn-primary" value="Submit"></input>
           </div>
         </form>      
   </div>
@@ -157,9 +157,9 @@
     <h4> - Site Links - </h4>
     <ul class="ul1">
         <li><a class="a1" href="index.html">Home</a></li>
-        <li><a class="a1" href="">About Us</a></li>
-        <li><a class="a1" href="">Privacy & Policy</a></li>
-        <li><a class="a1" href="">Contact</a></li>
+        <li><a class="a1" href="index.html">About Us</a></li>
+        <li><a class="a1" href="index.html">Privacy & Policy</a></li>
+        <li><a class="a1" href="index.html">Contact</a></li>
     </ul>
   </div>
   
@@ -176,9 +176,9 @@
              <br><h4> - Site Links - </h4>
                <ul class="ul1">
                  <li><a class="a1" href="index.html">Home</a></li>
-                 <li><a class="a1" href="">About Us</a></li>
-                 <li><a class="a1" href="">Privacy & Policy</a></li>
-                 <li><a class="a1" href="">Contact</a></li>
+                 <li><a class="a1" href="index.html">About Us</a></li>
+                 <li><a class="a1" href="index.html">Privacy & Policy</a></li>
+                 <li><a class="a1" href="index.html">Contact</a></li>
                </ul>
          </div>
     </div>
@@ -187,10 +187,8 @@
       <h4> - Subscribe to Our Daily Newsletter - </h4><br>
         <form class="container-fluid ">
            <div class="input-group">
-             <input type="text" id="email-id" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
-             <input type="button" class="btn btn-primary" value="Submit" id="Submit-mail"></input>
-              <script src="newsletter.js"></script>
-              <p id="output"></p>
+             <input type="text" class="form-control" placeholder="example@gmail.com" aria-describedby="basic-addon1">
+             <input type="button" class="btn btn-primary" value="Submit"></input>
             </div>
         </form>      
     </div>
